[gd_scene load_steps=2 format=3 uid="uid://bnt7qihri7o2m"]

[ext_resource type="Script" uid="uid://87c1r4mhowxg" path="res://scenes/main/task/task_panel.gd" id="1_ulu52"]

[node name="TaskScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ulu52")
metadata/_custom_type_script = "uid://87c1r4mhowxg"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ToolsBar" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Background" type="ColorRect" parent="VBoxContainer/ToolsBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.16862746)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ToolsBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ToolsBar/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "日常任务清单"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="FilterButton" type="Button" parent="VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "筛选"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="JumpToTaskEditScene" type="Button" parent="VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "编辑"

[node name="MainContent" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="VBoxContainer/MainContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.99999994, 0.7955241, 0.9954422, 0.16862746)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemCloner" type="Control" parent="VBoxContainer/MainContent/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Background" type="ColorRect" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.16862746)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TaskDoneCheckBox" type="CenterContainer" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer/TaskDoneCheckBox"]
layout_mode = 2

[node name="TaskSelectCheckBox2" type="CenterContainer" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer/TaskSelectCheckBox2"]
layout_mode = 2

[node name="ImportanceColor" type="MarginContainer" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="ImportanceColor" type="ColorRect" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer/ImportanceColor"]
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="TaskTag" type="Control" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2

[node name="Background" type="MarginContainer" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer/TaskTag"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="Background" type="ColorRect" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer/TaskTag/Background"]
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="TaskTag" type="Label" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer/TaskTag"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "家务"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TaskTime" type="Label" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "2025-11-01 00:50:00"
vertical_alignment = 1

[node name="TaskTitle" type="Label" parent="VBoxContainer/MainContent/VBoxContainer/ItemCloner/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "测试任务"
vertical_alignment = 1
